# compress-utils

./: .clang-tidy  .gitattributes  .gitignore  ACKNOWLEDGEMENTS.md  ACKNOWLEDGMENTS.md  CMakeLists.txt  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  TODO.md  build.ps1  build.sh  codec-versions.json  go.mod
.github/workflows/: build_and_test.yml  build_and_test_c_cpp.yml  build_and_test_go.yml  build_and_test_python.yml  build_and_test_rust.yml  build_and_test_wasm.yml  check-upstreams.yml  pr_build_and_test.yml  release_artifacts.yml  vendor-check.yml  version-check.yml
algorithms/: README.md
algorithms/brotli/: CMakeLists.txt
algorithms/bz2/: CMakeLists.txt
algorithms/gzip/: CMakeLists.txt
algorithms/lz4/: CMakeLists.txt
algorithms/snappy/: CMakeLists.txt
algorithms/xz/: CMakeLists.txt
algorithms/zlib/: CMakeLists.txt
algorithms/zstd/: CMakeLists.txt
benchmarks/: .gitignore  README.md  TODO.md  plot_langs.py  report.py  runner.py
benchmarks/corpus/: corpora.py  fetch.py  fetched.lock.json  generate.py  manifest.json
benchmarks/lib/: bench_common.py
bindings/c/: CMakeLists.txt  README.md  algorithms.h  algorithms.h.in  compress_utils.h  compress_utils_c.cpp  compression_utils.h  compression_utils_c.cpp  symbol_exports.h
bindings/c/tests/: CMakeLists.txt  test_compression_utils.c
bindings/cpp/: CMakeLists.txt  README.md
bindings/cpp/include/: compress_utils.hpp
bindings/cpp/test/: test_compress_utils.cpp
bindings/go/: README.md  cgo_generated.go  compress_utils.go  compress_utils_test.go  cu_gen_codec_brotli__c_common_constants_cgen.c  cu_gen_codec_brotli__c_common_context_cgen.c  cu_gen_codec_brotli__c_common_dictionary_cgen.c  cu_gen_codec_brotli__c_common_platform_cgen.c  cu_gen_codec_brotli__c_common_shared_dictionary_cgen.c  cu_gen_codec_brotli__c_common_transform_cgen.c  cu_gen_codec_brotli__c_dec_bit_reader_cgen.c  cu_gen_codec_brotli__c_dec_decode_cgen.c  cu_gen_codec_brotli__c_dec_huffman_cgen.c  cu_gen_codec_brotli__c_dec_prefix_cgen.c  cu_gen_codec_brotli__c_dec_state_cgen.c  cu_gen_codec_brotli__c_dec_static_init_cgen.c  cu_gen_codec_brotli__c_enc_backward_references_cgen.c  (+169 more)
bindings/python/: API.md  CMakeLists.txt  README.md  compress_utils_py.cpp  pyproject.toml  run_stubgen.cmake  setup.py
bindings/python/compress_utils/: __init__.py  compress_utils_py.pyi
bindings/python/tests/: test_compress_utils.py  test_compression_utils.py  test_interop.py
bindings/wasm/: .gitignore  CMakeLists.txt  DEVELOPMENT.md  README.md  biome.json  host.cmake  package-lock.json  package.json  playwright.config.ts  tsconfig.build.json  tsconfig.json  vitest.config.ts
bindings/wasm/scripts/: build-wasm.sh  inline-wasm.ts
bindings/wasm/src/: compress_utils.d.ts.in  compress_utils_wasm.cpp  index.ts  package.json  tsconfig.json
bindings/wasm/src/algorithms/brotli/: binding.cpp  compress.ts  index.browser.ts  index.node.ts  index.ts  module.ts  stream.ts
bindings/wasm/src/algorithms/brotli/compress/: index.ts
bindings/wasm/src/algorithms/brotli/decompress/: index.ts
bindings/wasm/src/algorithms/bz2/: binding.cpp  compress.ts  index.browser.ts  index.node.ts  index.ts  module.ts  stream.ts  wasm.generated.d.ts
bindings/wasm/src/algorithms/bz2/compress/: index.ts
bindings/wasm/src/algorithms/bz2/decompress/: index.ts
bindings/wasm/src/algorithms/gzip/: index.ts
bindings/wasm/src/algorithms/gzip/compress/: index.ts
bindings/wasm/src/algorithms/gzip/decompress/: index.ts
bindings/wasm/src/algorithms/lz4/: binding.cpp  compress.ts  index.browser.ts  index.node.ts  index.ts  module.ts  stream.ts
bindings/wasm/src/algorithms/lz4/compress/: index.ts
bindings/wasm/src/algorithms/lz4/decompress/: index.ts
bindings/wasm/src/algorithms/snappy/: index.ts
bindings/wasm/src/algorithms/snappy/compress/: index.ts
bindings/wasm/src/algorithms/snappy/decompress/: index.ts
bindings/wasm/src/algorithms/xz/: binding.cpp  compress.ts  index.browser.ts  index.node.ts  index.ts  module.ts  stream.ts
bindings/wasm/src/algorithms/xz/compress/: index.ts
bindings/wasm/src/algorithms/xz/decompress/: index.ts
bindings/wasm/src/algorithms/zlib/: binding.cpp  compress.ts  index.browser.ts  index.node.ts  index.ts  module.ts  stream.ts  wasm.generated.d.ts
bindings/wasm/src/algorithms/zlib/compress/: index.ts
bindings/wasm/src/algorithms/zlib/decompress/: index.ts
bindings/wasm/src/algorithms/zstd/: binding.cpp  compress.ts  index.browser.ts  index.node.ts  index.ts  module.ts  stream.ts
bindings/wasm/src/algorithms/zstd/compress/: index.ts
bindings/wasm/src/algorithms/zstd/decompress/: index.ts
bindings/wasm/src/core/: algorithm.ts  dispatch.ts  errors.ts  index.ts  levels.ts  loader.ts  resolve-browser.ts  resolve-default.ts  resolve-node.ts  types.ts  utils.ts
bindings/wasm/tests/: all.test.ts  api.test.ts  bundle.test.ts  helpers.ts
bindings/wasm/tests-browser/: browser.spec.ts  serve.mjs
bindings/wasm/tests-runtime/: deno-smoke.ts
bindings/wasm/tests/algorithms/: zstd.test.ts
bindings/wasm/tests/browser/: compress.spec.ts
bindings/wasm/tests/browser/fixtures/: index.html
bindings/wasm/tests/core/: utils.test.ts
bindings/wasm/tests/integration/: roundtrip.test.ts
bindings/wasm/tests/treeshake/: mock-wasm.js  treeshake.test.ts
cmake/: CodecVersions.cmake  Vendor.cmake
docs/: adding-a-language.md  adding-an-algorithm.md  wasm-size.md
include/: .clang-tidy  compress_utils.h
src/: .clang-tidy  algorithm_registry.h  algorithms.hpp  algorithms.hpp.in  compress_utils.c  compress_utils_stream.cpp  compression_utils.cpp  compression_utils.hpp  compression_utils_func.cpp  compression_utils_func.hpp  registry.c  symbol_exports.hpp  wasm_runtime.c
tests/: CMakeLists.txt  helpers.hpp  test_compress_utils.c  test_compress_utils_stream.cpp  test_compression_utils.cpp  test_compression_utils_func.cpp
tests/fuzz/: CMakeLists.txt  fuzz_decompress.c
tests/interop/: README.md  cli_crosscheck.py  snappy_oracle_test.cc
tools/: check-upstreams.py  gen-go-cgo.py  sync-codecs.py  sync-versions.py  vendor-codecs.py
(+39 files in other folders)
